tests/compile_pass/public_headers/runtime_descriptor.cpp
#include <pb/runtime/descriptor.hpp>

int pb_public_header_runtime_descriptor() { return 0; }
